ingressNOK.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["192.168.1.71"],"port":80,"protocol":"HTTP","serviceName":"whoami-p-42kmw:whoami","ingressName":"whoami-p-42kmw:whoami","hostname":"verdun.cocooning.tech","path":"/whoami","allNodes":false}]'
    kubernetes.io/ingress.class: traefik
    meta.helm.sh/release-name: whoami-p-42kmw
    meta.helm.sh/release-namespace: whoami-p-42kmw
  creationTimestamp: "2020-06-20T09:31:10Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
    io.cattle.field/appId: whoami-p-42kmw
  managedFields:
  - apiVersion: extensions/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:field.cattle.io/publicEndpoints: {}
          f:kubernetes.io/ingress.class: {}
          f:meta.helm.sh/release-name: {}
          f:meta.helm.sh/release-namespace: {}
        f:labels:
          .: {}
          f:app.kubernetes.io/managed-by: {}
          f:io.cattle.field/appId: {}
      f:spec:
        f:rules: {}
    manager: Go-http-client
    operation: Update
    time: "2020-06-20T09:31:10Z"
  - apiVersion: extensions/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: traefik
    operation: Update
    time: "2020-06-20T09:31:10Z"
  name: whoami
  namespace: whoami-p-42kmw
  resourceVersion: "138649"
  selfLink: /apis/extensions/v1beta1/namespaces/whoami-p-42kmw/ingresses/whoami
  uid: efc1ff43-cc4b-48ea-9491-fce367b750d8
spec:
  rules:
  - host: verdun.cocooning.tech
    http:
      paths:
      - backend:
          serviceName: whoami
          servicePort: 80
        path: /whoami
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - ip: 192.168.1.71
